Assertion failure in CDS shared string archive support on Windows

XMLWordPrintable

    • gc
    • b72
    • x86_64
    • windows
    • Verified

        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (C:\jprt\T\P1\234032.mseledtsov\s\hotspot\src\share\vm\gc\g1\g1CollectedHeap.cpp:1054), pid=59328, tid=0x000000000000defc
        # assert(count != 0) failed: No MemRegions provided
        #
        # JRE version: (9.0) (build )
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-20150615234032.mseledtsov.hs-rt-b00 mixed mode, sharing windows-amd64 compressed oops)



        V [jvm.dll+0x4a52e0] os::platform_print_native_stack+0x100;; ?platform_print_native_stack@os@@SA_NPEAVoutputStream@@PEAXPEADH@Z+0x100
        V [jvm.dll+0x3850a6] VMError::report+0xab6;; ?report@VMError@@AEAAXPEAVoutputStream@@@Z+0xab6
        V [jvm.dll+0x385cc3] VMError::report_and_die+0x413;; ?report_and_die@VMError@@QEAAXXZ+0x413
        V [jvm.dll+0x376eb1] report_vm_error+0x71;; ?report_vm_error@@YAXPEBDH00@Z+0x71
        V [jvm.dll+0x56bc0b] G1CollectedHeap::fill_archive_regions+0xab;; ?fill_archive_regions@G1CollectedHeap@@QEAAXPEAVMemRegion@@_K@Z+0xab
        V [jvm.dll+0x190bdc] Universe::genesis+0x54c;; ?genesis@Universe@@CAXPEAVThread@@@Z+0x54c
        V [jvm.dll+0x192f38] universe2_init+0x28;; ?universe2_init@@YAXXZ+0x28
        V [jvm.dll+0x2e76ea] init_globals+0xaa;; ?init_globals@@YAHXZ+0xaa
        V [jvm.dll+0x32f82f] Threads::create_vm+0x1cf;; ?create_vm@Threads@@SAHPEAUJavaVMInitArgs@@PEA_N@Z+0x1cf
        V [jvm.dll+0x20ce37] JNI_CreateJavaVM_inner+0xd7;; ?JNI_CreateJavaVM_inner@@YAHPEAPEAUJavaVM_@@PEAPEAXPEAX@Z+0xd7
        V [jvm.dll+0x21000f] JNI_CreateJavaVM+0x1f;; JNI_CreateJavaVM+0x1f

              Assignee:
              Thomas Benson (Inactive)
              Reporter:
              Jesper Wilhelmsson
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: