8098815: Assertion failure in CDS shared string archive support on Windows

Check for a zero length before calling the G1 fill_archive_regions routine

Reviewed-by: coleenp, iklam, dcubed